# xorshift128plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rng.hpp  test_rng.cpp
